[gd_scene load_steps=4 format=3 uid="uid://belx0qfvh4cii"]

[ext_resource type="Script" path="res://Scenes/ui.gd" id="1_fb7xm"]
[ext_resource type="FontFile" uid="uid://ch103gi2tob72" path="res://Assets/font/andina.ttf" id="2_yubox"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mokxj"]
bg_color = Color(0, 0.709804, 0.486275, 1)

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_fb7xm")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="Points" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_fonts/font = ExtResource("2_yubox")
theme_override_font_sizes/font_size = 30
text = "SCORE: 0
"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
theme_override_constants/separation = 16

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="GameOverBox" type="VBoxContainer" parent="MarginContainer/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/GameOverBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "GAME OVER"

[node name="ScoreSubmissionScreen" type="Button" parent="MarginContainer/CenterContainer/GameOverBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_mokxj")
text = "Submit Score"

[node name="Restart" type="Button" parent="MarginContainer/CenterContainer/GameOverBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_mokxj")
text = "RESTART"

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Score Submit Box" type="VBoxContainer" parent="MarginContainer/CenterContainer2"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/CenterContainer2/Score Submit Box"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "             "

[node name="TextEdit" type="TextEdit" parent="MarginContainer/CenterContainer2/Score Submit Box"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 15
placeholder_text = "Name"

[node name="SubmitScore" type="Button" parent="MarginContainer/CenterContainer2/Score Submit Box"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_mokxj")
text = "Submit Score"

[connection signal="pressed" from="MarginContainer/CenterContainer/GameOverBox/ScoreSubmissionScreen" to="." method="_on_score_submission_screen_pressed"]
[connection signal="pressed" from="MarginContainer/CenterContainer2/Score Submit Box/SubmitScore" to="." method="_on_submit_score_pressed"]
